@@ -26,6 +26,12 @@ jQuery(function ($) {
                 useLocation: false,
                 useReferrer: false
             });
+
+            try {
+              scanforlinks();
+            } catch(err) {
+              // Ignore - may be the feature is disabled
+            }
         });
     });
 
